--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>PLANNEALO - Gestión de Itinerarios de Viaje</title>
-    <meta name="description" content="Plataforma profesional para gestionar itinerarios de viaje. Crea, edita y administra reservas de tus clientes con PLANNEALO." />
+    <meta name="description" content="Plataforma profesional para gestionar itinerarios de viaje. Crea, edita y administra reservas de tus viajeros con PLANNEALO." />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
